--- a/about.html
+++ b/about.html
@@ -63,6 +63,70 @@
                 </div>
 
             </div>
+
+
+        </section>
+
+        <section id="about-c">
+            <div class="container">
+                <div class="row">
+                    <div style="text-align: center; color:orange" class="col-lg-12 about-c py-3">
+                        <strong> We encourage some healthy competition at max's fruit shop, have a look at our weekly
+                            staff sales
+                            leaderboards!</strong>
+
+                        <table class="table table-hover">
+                            <thead>
+                                <tr>
+                                    <th scope="col">#</th>
+                                    <th scope="col">Name</th>
+                                    <th scope="col">Number Of Sales</th>
+                                    <th scope="col">Best Selling Fruit</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <th scope="row">1</th>
+                                    <td>Mark</td>
+                                    <td>78</td>
+                                    <td>Orange</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">2</th>
+                                    <td>Jacob</td>
+                                    <td>76</td>
+                                    <td>Carrot</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">3</th>
+                                    <td>Sally</td>
+                                    <td>67</td>
+                                    <td>Raspberry</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">4</th>
+                                    <td>Griswold</td>
+                                    <td>60</td>
+                                    <td>Lemon</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">5</th>
+                                    <td>Samantha</td>
+                                    <td>55</td>
+                                    <td>Orange</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">6</th>
+                                    <td>Frikkie</td>
+                                    <td>45</td>
+                                    <td>Banana</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+
+                </div>
+            </div>
         </section>
 
 
