--- a/about.html
+++ b/about.html
@@ -13,6 +13,7 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
     </script>
     <script src="https://kit.fontawesome.com/af356b6923.js" crossorigin="anonymous"></script>
+    <script src="cart.js"></script>
     <title>Max's Fruit Shop</title>
 </head>
 
@@ -36,6 +37,7 @@
                 <li><a href="fruits.html">FRUITS</a></li>
                 <li><a href="about.html">ABOUT</a></li>
                 <li><a href="contact.html">CONTACT</a></li>
+                <li><a href="cart.html">VIEW CART <i class="fas fa-shopping-cart"></i></a></li>
             </ul>
 
         </nav>
@@ -45,15 +47,13 @@
                 <div class="row">
                     <div class=" col-lg-6 col-sm-12 about-a">
                         <h3>Our History</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore et excepturi dignissimos
-                            sunt ad adipisci quas amet veritatis labore dolorum rerum dicta totam qui fuga voluptas
-                            obcaecati nisi debitis dolor, iure hic ab ipsum possimus nihil tenetur! Consectetur
-                            necessitatibus tenetur eligendi eaque. Distinctio beatae perferendis pariatur delectus,
-                            voluptate cumque aliquam molestiae accusamus sunt, odio aperiam veritatis! A doloremque
-                            harum blanditiis eligendi ratione magni nesciunt eos, pariatur fugit quaerat repudiandae,
-                            veritatis dolore accusantium repellat dicta explicabo! Enim quae quaerat ratione quod
-                            explicabo consectetur fugit nam culpa expedita eum dolor beatae, rem magnam aspernatur
-                            praesentium soluta! Quas non inventore ducimus impedit ut?</p>
+                        <p>Max's fruit shop started back in 2005 , one man with a dream ended up creating one of the
+                            biggest fruit empires the world has ever known. Today max's Fruit shop sells fruits to more
+                            than 1.4 million customers worldwide and is largely considered to be the greatest fruit shop
+                            in existence </p>
+                        <h3>Our Partners</h3>
+                        <p><a href="https://www.sevenseasfruit.com">Seven Seas Fruits</a></p>
+                        <p><a href="https://www.corefruit.com">Core Fruits</a></p>
 
                     </div>
                     <div class=" col-lg-6 col-sm-12 about-b">
@@ -131,7 +131,6 @@
 
 
 
-
         <!-- FOOTER SECTION-->
 
         <footer id="mainFooter">
@@ -160,6 +159,9 @@
             <p>Copyright &copy; 2019 Max's Fruit Shop. All Rights Reserved.</p>
         </footer>
 
-
+        <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+            integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 
 </body>
+
+</html>
