--- a/contact.html
+++ b/contact.html
@@ -38,6 +38,7 @@
                 <li><a href="fruits.html">FRUITS</a></li>
                 <li><a href="about.html">ABOUT</a></li>
                 <li><a href="contact.html">CONTACT</a></li>
+                <li><a href="cart.html">VIEW CART <i class="fas fa-shopping-cart"></i></a></li>
             </ul>
 
         </nav>
@@ -69,8 +70,9 @@
                                 <div class="form-group">
                                     <label for="orderInput"></label>
                                     <textarea name="orderInput" cols="73" rows="3"
-                                        placeholder="Enter your order here"></textarea>
+                                        placeholder="Enter your query here"></textarea>
                                 </div>
+
 
                                 <button type="submit" class="btn btn-primary">Submit</button>
                             </form>
@@ -102,32 +104,39 @@
 
         </section>
 
+    </header>
 
+    <!-- FOOTER SECTION-->
 
-        <!-- FOOTER SECTION-->
+    <footer id="mainFooter">
+        <div class="container-fluid">
+            <div class="footerItems">
+                <div>
+                    <h1>Best Quality</h1>
+                    <i class="fas fa-thumbs-up  fa-4x"></i>
 
-        <footer id="mainFooter">
-            <div class="container-fluid">
-                <div class="footerItems">
-                    <div>
-                        <h1>Best Quality</h1>
-                        <i class="fas fa-thumbs-up  fa-4x"></i>
+                </div>
+                <div>
+                    <h1>Finest Service</h1>
+                    <i class="fas fa-thumbs-up fa-4x"></i>
 
-                    </div>
-                    <div>
-                        <h1>Finest Service</h1>
-                        <i class="fas fa-thumbs-up fa-4x"></i>
+                </div>
+                <div>
+                    <h1>Healthiest Fruits</h1>
+                    <i class="fas fa-thumbs-up fa-4x"></i>
 
-                    </div>
-                    <div>
-                        <h1>Healthiest Fruits</h1>
-                        <i class="fas fa-thumbs-up fa-4x"></i>
-
-                    </div>
                 </div>
             </div>
+        </div>
 
 
 
-            <p>Copyright &copy; 2019 Max's Fruit Shop. All Rights Reserved.</p>
-        </footer>
+        <p>Copyright &copy; 2019 Max's Fruit Shop. All Rights Reserved.</p>
+    </footer>
+    </header>
+    <script src="main.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+</body>
+
+</html>
