--- a/cart.html
+++ b/cart.html
@@ -62,8 +62,7 @@
                         </thead>
                         <tbody id="tableInsert">
 
-
-                            <!-- <tr>
+                            <tr>
                                 <th scope="row">1</th>
                                 <td>Box of apples</td>
                                 <td>15</td>
@@ -86,9 +85,13 @@
                                 <td>Overnight</td>
                                 <td>No</td>
                                 <td><i onclick="removeItem()" class="fas fa-times"></i></td>
-                            </tr> -->
+                            </tr>
 
                         </tbody>
+
+                        <h2 style="color:red; text-decoration: underline;">TOTAL: <span class="totalDisplay">213</span>
+                        </h2>
+
                     </table>
 
                     <form style="display: flex;">
@@ -135,6 +138,8 @@
 
             <p>Copyright &copy; 2019 Max's Fruit Shop. All Rights Reserved.</p>
         </footer>
+
+
         <script src="main.js"></script>
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"
             integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
