--- a/fruits.html
+++ b/fruits.html
@@ -233,7 +233,7 @@
                                 </div>
                                 <div class="card-body">
                                     <h5 class="card-title">Watermelons</h5>
-                                    <p class="card-text">R<span class="fruitPrice"></span>55/Kg</p>
+                                    <p class="card-text">R<span class="fruitPrice">55</span>/Kg</p>
                                     <a onclick="addItem(),incrementCart()" class="btn btn-primary">Add To Cart</a>
                                 </div>
                             </div>
@@ -335,5 +335,8 @@
     </footer>
 
 </body>
+<script src="main.js"></script>
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"
+    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 
 </html>
