--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
     </script>
     <script src="https://kit.fontawesome.com/af356b6923.js" crossorigin="anonymous"></script>
-    <script src="cart.js"></script>
+
     <title>Max's Fruit Shop</title>
 </head>
 
@@ -158,7 +158,7 @@
 
             <p>Copyright &copy; 2019 Max's Fruit Shop. All Rights Reserved.</p>
         </footer>
-
+        <script src="main.js"></script>
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"
             integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 
