--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
                 <li><a href="fruits.html">FRUITS</a></li>
                 <li><a href="about.html">ABOUT</a></li>
                 <li><a href="contact.html">CONTACT</a></li>
-                <li><a href="cart.html">VIEW CART <i class="fas fa-shopping-cart"></i></a></li>
+                <li><a href="fruits.html">VIEW CART <i class="fas fa-shopping-cart"></i></a></li>
             </ul>
 
         </nav>
@@ -159,8 +159,8 @@
             <p>Copyright &copy; 2019 Max's Fruit Shop. All Rights Reserved.</p>
         </footer>
         <script src="main.js"></script>
-        <script src="https://code.jquery.com/jquery-3.4.1.min.js"
-            integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.4.1.js"
+            integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
 
 </body>
 
